Implementando middlewares, banco de dados e alteração ao swagger
